Base template & CSS rewrite. Fixes numerous mobile bugs Forces footer to follow page bottom, but not overlap body content

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,35 +1,79 @@
 $footer-height: 100px;
+$header-height: 75px;
 
 html, body {
-  height:100%;
+  height: 100%;
   padding: 0;
   margin: 0;
 }
 
-#full-wrapper {
-  min-height: 100%;
-  position: relative;
-  overflow: hidden;
+// Base CSS //
+.full-wrapper {
+  display: table;
+  height: 100%;
+  width: 100%;
+  background-color: #EEE;
 }
 
-#content-wrapper {
+.navbar-wrapper {
   overflow: hidden;
-  background-color: #EEEEEE;
+  display: table-caption;
 }
 
-.bodypanel {
-  min-height: 100% !important;
-  background-color: #FFFFFF;
+.content-wrapper {
+  display: table-row;
 }
 
-#footer-wrapper {
-  overflow: hidden;
+.content-block {
+  display: table-cell;
+  height: 100%;
+  background-color: #EEE;
+}
+
+.content-body {
+  padding: 10px;
+}
+
+.content-sidebar {
+  padding: 20px 0;
+}
+
+.content-footer {
+  display: table-row;
+  background-color: #EEE;
   height: $footer-height;
+}
+
+.content-footer > .footer {
   padding-top: 15px;
 }
 
+// Don't display like a table for mobile
+@media
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+  .full-wrapper {
+    display: block;
+  }
+
+  .navbar-wrapper {
+    display: block;
+  }
+
+  .content-block {
+    display: block;
+    height: auto;
+  }
+}
+
+// misc
 .label-as-badge {
     border-radius: 1em;
+}
+
+.white-bg {
+  background-color: #FFF;
 }
 
 .fa.fa-nav {
@@ -176,15 +220,6 @@ ul.navbar-user {
   background-color: fff;
   border-bottom: 0;
   border-color: #EEE;
-}
-
-.sidebar {
-  background-color: #EEE;
-  padding: 20px 0;
-}
-
-.body-wrapper {
-  padding: 10px;
 }
 
 .post-text {
